--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,85 @@
-/*  your css code here. If applicable */
+*{
+	font-family: "Open Sans", sans-serif;
+}
+
+
+.toggle-container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	gap: 12px;
+}
+
+h2{
+	text-align:center;
+}
+
+.toggle-text{
+	position: absolute;
+	left: 88px;
+	top: 4px;
+	font-weight: bold;
+}
+
+
+.toggle-div {
+    position: relative;
+    display: inline-block;
+    width: 64px;
+    height: 34px;
+  }
+  
+  
+  .toggle-span{
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: -2px;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  
+  .toggle-span:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 8px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  
+
+  
+  input:checked + .toggle-span {
+    background-color: #8e44ad;
+  }
+  
+  input:focus + .toggle-span {
+    box-shadow: 0 0 1px #8e44ad;
+  }
+  
+  input:checked + .toggle-span:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+
+
+
+  
+  .toggle-span.round {
+    border-radius: 34px;
+  }
+  
+  .toggle-span.round:before {
+    border-radius: 50%;
+  }
+  
